--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: myuser/myapp:latest
+        tags: alexchenqr/solidity-smart-contract:latest
